--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </ion-item>
 
                     <ion-card-header>
-                        <ion-card-title>Artikle 1</ion-card-title>
+                        <ion-card-title>Artikel 1</ion-card-title>
                     </ion-card-header>
                     <ion-card-content>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus beatae sed velit
@@ -74,7 +74,7 @@
                     </ion-card-content>
 
                     <ion-card-header>
-                        <ion-card-title>Artikle 2</ion-card-title>
+                        <ion-card-title>Artikel 2</ion-card-title>
                     </ion-card-header>
                     <ion-card-content>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus beatae sed velit
